feat: add linear regression
