# app/Routes/__init__.py
@@ -2,6 +2,8 @@ from flask_restful import Api
 from app.Routes.auth import Login, Logout
 from app.Routes.production import ProductionAPI
 from app.Routes.users import ManageUsers
+from app.Routes.dashboard import LinearRegressionAPI
+
 
 def generate_routes(app):
     api = Api(app)
@@ -11,5 +13,7 @@ def generate_routes(app):
 
     api.add_resource(ProductionAPI, "/api/production", "/api/production/<int:productionId>")
     api.add_resource(ManageUsers, "/api/users", "/api/users/<userId>")
+
+    api.add_resource(LinearRegressionAPI, "/api/dashboard/trend")
     
     
